--- a/file/style.css
+++ b/file/style.css
@@ -7,8 +7,19 @@ body {
     font-size: 18px;
 }
 
+#preso a,
+#preso a:visited,
+#preso a:link {
+    color: #6D4927;
+    font-weight: bold;
+    text-decoration: none;
+    border-bottom: 2px solid #6D4927;
+}
+
+
 /* Code font*/
-code, pre {
+#preso code,
+#preso pre {
     font-family: Consolas,
              "Andale Mono",
              "Lucida Console",
@@ -21,10 +32,15 @@ code, pre {
              "Courier New",
              Courier,
              monospace;
-    border: 3px dashed #98CBD6;
     color: #000;
     padding: 0.5em;
+    font-size: 18px;
+    background-color: transparent;
 }
+#preso code {
+    border: 3px dashed #98CBD6;
+}
+
 
 /* Title sizes */
 h1 { font-size: 48px; color: #31626D;}
@@ -40,9 +56,8 @@ h3 { font-size: 24px; }
 
 
 /* Google maps */
-#gmaps {
-    width: 640px;
-    height: 480px;
+#preso img,
+#preso .gmaps {
     margin: 1em auto;
     box-shadow: #666 0 3px 5px;
     -webkit-box-shadow: #666 0 3px 5px;
@@ -53,8 +68,24 @@ h3 { font-size: 24px; }
     background-color: #fff;
     padding: 15px;
 }
-#gmaps #canvas {
+.gmaps {
+    width: 640px;
     height: 480px;
+}
+.gmaps #canvas,
+.gmaps #canvas2 {
+    height: 480px;
+    box-shadow: none;
+}
+
+.gmaps #canvas2 img {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    background-color: transparent;
 }
 
 /* Default widths */
