--- a/style.css
+++ b/style.css
@@ -17,6 +17,25 @@ body {
 }
 
 
+/* Style for individual slides */
+#preso .features img {
+    display: inline-block;
+    padding: 0.1em;
+    margin: 0;
+}
+
+#preso .family ul li{
+    display: inline-block;
+    float: left;
+    width: 50%;
+}
+
+#preso .googlemap3 button {
+    margin: 0;
+}
+
+
+
 /* Code font*/
 #preso code,
 #preso pre {
@@ -38,7 +57,9 @@ body {
     background-color: transparent;
 }
 #preso code {
-    border: 3px dashed #98CBD6;
+    display: block;
+    border: 1px dashed #65aaba;
+    background-color: #eee;
 }
 
 
@@ -57,7 +78,7 @@ h3 { font-size: 24px; }
 }
 
 .slide {
-    margin-top: -80px;
+    margin-top: -30px;
 }
 
 
@@ -76,16 +97,18 @@ h3 { font-size: 24px; }
 }
 .gmaps {
     width: 640px;
-    height: 480px;
+    height: 410px;
 }
 .gmaps #canvas,
-.gmaps #canvas2 {
-    height: 480px;
+.gmaps #canvas2,
+.gmaps #canvas3 {
+    height: 410px;
     box-shadow: none;
 }
 
 .gmaps #canvas img,
-.gmaps #canvas2 img {
+.gmaps #canvas2 img,
+.gmaps #canvas3 img {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
